# demo-stargazers

./: .envrc-example  .gitignore  .ignore  Cargo.toml  Justfile  README.md  dev-deps.txt  flake.nix  obelisk-local-go-activity.toml  obelisk-local-go-all.toml  obelisk-local-go-webhook.toml  obelisk-local-go-workflow.toml  obelisk-local-js-activity.toml  obelisk-local-js-all.toml  obelisk-local-js-webhook.toml  obelisk-local-js-workflow.toml  obelisk-local-legacy-componentizejs-activity.toml  obelisk-local-legacy-componentizejs-all.toml  obelisk-local-legacy-componentizejs-webhook.toml  obelisk-local-legacy-componentizejs-workflow.toml  obelisk-local-native-all.toml  obelisk-local.toml  obelisk-oci.toml  obelisk.toml
.config/: nextest.toml
.github/workflows/: bot-rebase.yml  cache-nix.yml  check-e2e.yml  check-test-e2e.yml  check-test-integration.yml  check-test-unit.yml  check-test.yml  check-verify-go.yml  check-verify-javascript.yml  check-verify.yml  check.yml  push-components.yml  scheduled-bump-cargo-lock.yml  scheduled-bump-flake-lock.yml  sync-flake-lock.yml
account/github/: Cargo.toml  README.md
account/github/.cargo/: config.toml
account/github/builder/: Cargo.toml
account/github/src/: lib.rs
account/interface/: account.wit
activity/account/github/: Cargo.toml  README.md  build.rs
activity/account/github/.cargo/: config.toml
activity/account/github/builder/: Cargo.toml
activity/account/github/src/: lib.rs
activity/account/github/wit/: github.wit
activity/account/interface/: account.wit
activity/account/interface-ext/: account-ext.wit
activity/db/interface/: db.wit
activity/db/interface-ext/: db-ext.wit
activity/db/turso/: Cargo.toml  README.md  build.rs
activity/db/turso/builder/: Cargo.toml
activity/db/turso/ddl/: schema.sql
activity/db/turso/src/: lib.rs  turso.rs
activity/db/turso/wit/: turso-world.wit
activity/db/wit/: dummy.wit
activity/github/impl/: Cargo.toml  README.md
activity/github/impl/.cargo/: config.toml
activity/github/impl/builder/: Cargo.toml
activity/github/impl/src/: lib.rs  stargazers.rs
activity/github/impl/wit/: github-world.wit
activity/github/interface-ext/: github-ext.wit
activity/llm/chatgpt/: Cargo.toml  README.md
activity/llm/chatgpt/.cargo/: config.toml
activity/llm/chatgpt/builder/: Cargo.toml
activity/llm/chatgpt/src/: lib.rs
activity/llm/chatgpt/wit/: chatgpt-world.wit
db/interface/: db.wit
db/turso/: Cargo.toml  README.md
llm/chatgpt/: Cargo.toml  README.md
llm/chatgpt/builder/: Cargo.toml
llm/interface/: llm.wit
scripts/: build-components-go.sh  build-components-js.sh  build-components-legacy-componentizejs.sh  build-js-components.sh  bump-deps-go.sh  bump-deps-js.sh  bump-deps-legacy-componentizejs.sh  dev-deps.sh  e2e.sh  mock-openai-server.py  obelisk-generate-extensions.sh  obelisk-generate-wit-extensions.sh  push-components.sh  test-e2e.sh  test-integration.sh  test-unit.sh
src/: lib.rs
webhook/: Cargo.toml  README.md
webhook-go/: README.md  build.sh  go.mod  go.sum  main.go
webhook-go/wit/: webhook-world.wit
webhook-js/: README.md  call-componentize.js  esbuild.config.js  package-lock.json  package.json
webhook-js/src/: index.js
webhook-js/wit/: webhook-world.wit
webhook/builder/: Cargo.toml
webhook/src/: lib.rs
webhook/webhook-go/: README.md  go.sum  main.go
webhook/webhook-go/wit/: webhook-world.wit
webhook/webhook-js/: README.md  package-lock.json  package.json  webhook.js
webhook/webhook-js/src/: index.js
webhook/webhook-legacy-componentizejs/: README.md  package-lock.json  package.json
webhook/webhook-legacy-componentizejs/wit/: webhook-world.wit
webhook/webhook-native/: webhook.js
webhook/webhook-rs/: Cargo.toml  README.md  build.rs
webhook/webhook-rs/src/: lib.rs
webhook/webhook-rs/wit/: webhook-world.wit
webhook/wit/: webhook-world.wit  webhook.wit
wit/obelisk-types/: obelisk-types.wit
wit/obelisk_workflow/: workflow-support.wit
workflow/: Cargo.toml  README.md
workflow-go/: README.md  go.sum  main.go
workflow-go/wit/: hello.wit  workflow-go-world.wit
workflow-js/: README.md  bytecodealliance-componentize-js-patch.txt  call-componentize.js  esbuild.config.js  package-lock.json  package.json
workflow-js/src/: index.js  workflow.js
workflow-js/wit/: workflow-js-world.wit
workflow/builder/: Cargo.toml
workflow/interface/: workflow.wit
workflow/interface-ext/: workflow-ext.wit
workflow/src/: lib.rs
workflow/stargazers/wit/: dummy.wit
workflow/stargazers/wit-interface/stargazers_workflow/: workflow.wit
workflow/stargazers/workflow-go/: README.md  main.go
workflow/stargazers/workflow-go/wit/: workflow-go-world.wit
workflow/stargazers/workflow-js/: README.md  backfill-parallel.js  backfill.js  package-lock.json  package.json  star-added-parallel.js  star-added.js  star-removed.js
workflow/stargazers/workflow-js/src/: index.js
workflow/stargazers/workflow-js/wit/: workflow-js-world.wit
workflow/stargazers/workflow-legacy-componentizejs/: README.md  package-lock.json  package.json
workflow/stargazers/workflow-legacy-componentizejs/src/: index.js
workflow/stargazers/workflow-legacy-componentizejs/wit/: workflow-js-world.wit
workflow/stargazers/workflow-native/: backfill-parallel.js  backfill.js  star-added-parallel.js  star-added.js  star-removed.js
workflow/stargazers/workflow-rs/: Cargo.toml  README.md
workflow/stargazers/workflow-rs/src/: lib.rs
workflow/stargazers/workflow-rs/wit/: workflow-world.wit
workflow/wit/: workflow-world.wit  workflow.wit
workflow/wit/ext/: workflow-ext.wit
workflow/wit/stargazers_workflow-obelisk-ext/: workflow-obelisk-ext.wit
workflow/wit/stargazers_workflow-obelisk-schedule/: workflow-obelisk-schedule.wit
workflow/workflow-go/: README.md  go.mod  main.go  regenerate.sh
workflow/workflow-go/wit/: workflow-go-world.wit
workflow/workflow-js/: call-componentize.js  package-lock.json  package.json
workflow/workflow-js/wit/: workflow-js-world.wit
workflow/workflow-rs/: Cargo.toml  README.md
workflow/workflow-rs/src/: lib.rs
(+48 files in other folders)
