[workspace]
resolver = "2"
members = [
    "activity/github/impl",
    "activity/db/turso",
    "activity/llm/openai",
    "webhook/webhook-rs",
    "workflow/workflow-rs",
]

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/obeli-sk/stargazers"
authors = ["Project Developers"]
edition = "2024"
rust-version = "1.89.0"

[workspace.dependencies]
cynic = "3.12.0"
cynic-codegen = "3.12.0"
derive_more = { version = "2.0", features = ["display"] }
hex = "0.4.3"
hmac = "0.12.1"
humantime = "2.3.0"
rand = { version = "0.9", default-features = false, features = [
    "small_rng",
    "os_rng",
    "std",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
waki = { version = "0.5.1", features = ["json"] }
waki-macros = "0.5.1"
wit-bindgen = "0.46.0"

[profile.release]
opt-level = "s"
debug = 1
