[package]
name = "webhook"
description = "GitHub webhook endpoint that triggers the stargazers workflow"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more.workspace = true
hex.workspace = true
hmac.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
url.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true
wit-parser.workspace = true
