[package]
name = "activity-account-github"
description = "Activity that fetches basic info like repositories, contributions etc. for a given account."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
waki.workspace = true
wit-bindgen.workspace = true
