[package]
name = "activity-db-turso"
description = "Activity that implements the db interface using Turso."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true
wstd.workspace = true

[dev-dependencies]
rand.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true
wit-parser.workspace = true
