[package]
name = "activity-github-impl"
description = "Activity that queries GitHub."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cynic.workspace = true
serde.workspace = true
serde_json.workspace = true
waki.workspace = true
wit-bindgen.workspace = true

[build-dependencies]
cynic-codegen.workspace = true
