[package]
name = "activity-llm-chatgpt"
description = "Activity that fetches an LLM-generated response for a given prompt."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
waki.workspace = true
wit-bindgen.workspace = true
