[package]
name = "llm-chatgpt-builder"
description = "Runs cargo build for the parent package"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
obelisk-component-builder.workspace = true
