[package]
name = "workflow"
description = "Workflow that interacts with database and llm activities"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true

[build-dependencies]
anyhow.workspace = true
wit-bindgen-rust.workspace = true
wit-parser.workspace = true
